# rustle

./: .gitignore  Cargo.toml  LICENSE.md  README.md  index.rustle  test.json  test.svelte
.github/workflows/: rust.yml
examples/: Cargo.toml
examples/counter/: Cargo.toml
examples/counter/assets/: app.js  index.html
examples/counter/src/: main.rs
examples/counter/static/: app.svelte
examples/dom_events/: Cargo.toml  index.html  style.css
examples/hello_world/: Cargo.toml  app.js  app.svelte  index.html
examples/hello_world/src/: main.rs
locate_character/: Cargo.toml
rustle/: Cargo.toml
rustle/src/: lib.rs
rustle/src/compiler/: ast.rs  expr_visitor.rs  interfaces.rs  mod.rs  node.rs  swc_ast_visitor.rs
rustle/src/compiler/analyse/: extract_css_classes.rs  extract_root_variables.rs  extract_variables.rs  extract_variables_that_change.rs  mod.rs
rustle/src/compiler/compile/utils/: extract_svelte_ignore.rs  mod.rs
rustle/src/compiler/generate/: add_lifecycle_call.rs  generate_css.rs  mod.rs  print_css.rs  print_js.rs
rustle/src/compiler/parse/: acorn.rs  ast.rs  fragments.rs  index.rs  mod.rs  parser.rs  swc_helpers.rs  utils.rs
rustle/src/compiler/parse/read/: context.rs  expression.rs  mod.rs  script.rs  style.rs
rustle/src/compiler/parse/state/: fragment.rs  mod.rs  mustache.rs  tag.rs  text.rs
rustle/src/compiler/parse/utils/: brackets.rs  entities.rs  html.rs  mod.rs  node.rs
rustle/src/compiler/utils/: error.rs  full_char_at.rs  full_char_code_at.rs  fuzzymatch.rs  fuzzymatch_test.json  get_code_frame.rs  list.rs  mod.rs  names.rs  patterns.rs
rustle/src/runtime/internal/: insert.ts
rustle/src/shared/: boolean_attributes.rs  mod.rs
rustle/src/shared/utils/: mod.rs  names.rs
rustle/tests/: App.js  App.svelte  Button.js  Counter.js  Counter.svelte  app.css  app.js  app.json  app.rustle  app.svelte  ast.json  counter_ast.json  index.html  test_parsing.rs
rustle/tests/nested_component/: App.js
rustle_cli/: Cargo.toml
rustle_cli/src/: main.rs
rustle_code_red/: Cargo.toml
rustle_code_red/src/: lib.rs
rustle_code_red/src/print/: handlers.rs  mod.rs
rustle_code_red/src/utils/: mod.rs  push_array.rs
rustle_locate_character/: Cargo.toml  README.md
rustle_locate_character/src/: lib.rs  locate.rs  locator.rs
src/: lib.rs  main.rs
src/compiler/: interfaces.rs  mod.rs  node.rs
src/compiler/parse/: errors.rs  index.rs  mod.rs
src/compiler/parse/read/: context.rs
src/compiler/parse/state/: fragment.rs  mustache.rs  tag.rs  text.rs
src/compiler/parse/utils/: brackets.rs  entities.rs  html.rs  mod.rs
src/compiler/utils/: error.rs  full_char_at.rs  full_char_code_at.rs  get_code_frame.rs  mod.rs  names.rs  namespaces.rs  patterns.rs  push_vec.rs  trim.rs
src/shared/: boolean_attributes.rs  mod.rs
src/shared/utils/: names.rs
