[package]
name = "rustle"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["locate_character"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
locate_character = { path = "locate_character", version = "0.1.0" }

lazy_static = "1.4.0"
regex = "1.6.0"
strum = "0.24.1"
strum_macros = "0.24.3"

swc_ecma_ast = "0.90.7"
swc_ecma_parser = "0.117.0"
swc_estree_ast = "0.17.2"
