[package]
name = "rustle"
version = "0.1.5"
authors = ["pintariching"]
license = "MIT"
description = "A Svelte-like compiler written in Rust."
readme = "../README.md"
homepage = "https://github.com/pintariching/rustle"
repository = "https://github.com/pintariching/rustle"
keywords = ["svelte", "rust", "compiler", "cli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
