[package]
name = "rustle_cli"
version = "0.0.1-alpha"
authors = ["pintariching", "qwertydelle", "linrium", "iceghost", "linh-1", "TheMixu"]
license = "MIT"
description = "The CLI for the Svelte compiler, rewritten in Rust."
readme = "../README.md"
homepage = "https://github.com/pintariching/rustle"
repository = "https://github.com/pintariching/rustle"
keywords = ["svelte", "rust", "compiler", "cli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustle = { path = "../rustle"}
console = "0.15.2"
clap = { version = "4.0.18", features = ["derive"] }
serde_json = "1.0.87"