[package]
name = "rustle_cli"
version = "0.1.3"
authors = ["pintariching"]
license = "MIT"
description = "The Rustle CLI"
readme = "../README.md"
homepage = "https://github.com/pintariching/rustle"
repository = "https://github.com/pintariching/rustle"
keywords = ["svelte", "rust", "compiler", "cli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
serde_json = "1.0.96"

[[bin]]
name = "rustle"
path = "src/main.rs"