[package]
name = "counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustle = { path = "../../rustle" }
axum = "0.5.16"
axum-extra = { version = "0.3.7", features = ["spa"] }
tokio = { version = "1.21.2", features = ["full"] }